# frontend-visualqa

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.agents/skills/: README.md
.agents/skills/frontend-visualqa/: SKILL.md  agents  references
.claude/: REFACTOR.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: create-pr.yml  open-pr.yml  publish_to_pypi.yml  visualqa.yml
agent_artifacts/: browser-mode-plan.md
docs/: skill-ecosystem.md
examples/: CLAIMS.md  analytics_dashboard.html  asset_library.html  booking_form.html  calendar_scheduler.html  campaign_editor.html  chart_legend.html  comprehensive_test.html  device_dashboard.html  ecommerce_store.html  login_flow_claims.md  multi_page_app.html  notification_center.html  pricing_plans.html  regression_wrong_heading.html  regression_wrong_modal_title.html  service_status.html  team_settings.html  test_page.html  yutori_login.html
examples/benchmarks/readme/: index.html
examples/benchmarks/readme/settings/: index.html
examples/benchmarks/readme/signup/: index.html
examples/benchmarks/readme/tasks/: index.html
examples/benchmarks/readme/tasks/123/: index.html
examples/benchmarks/readme/tasks/124/: index.html
examples/benchmarks/realistic/settings/: index.html
scripts/: benchmark_readme_variants.py
skills/frontend-visualqa/: SKILL.md
skills/frontend-visualqa/agents/: openai.yaml
skills/frontend-visualqa/references/: claim-writing.md  install.md  protocol.md
src/frontend_visualqa/: __init__.py  actions.py  artifacts.py  bot_detection.py  browser.py  claim_parser.py  claim_verifier.py  cli.py  errors.py  grounding.py  hook_adapter.py  mcp_server.py  n1_client.py  navigator_client.py  overlay.py  prompts.py  recovery.py  reporters.py  runner.py  schemas.py  serialization.py  text_utils.py  tool_arguments.py  utils.py  yutori_compat.py
tests/: fakes.py  test_actions.py  test_bot_detection.py  test_browser.py  test_claim_parser.py  test_claim_verifier.py  test_cli.py  test_grounding.py  test_live_runner.py  test_mcp_server.py  test_n1_client.py  test_navigator_client.py  test_overlay.py  test_reporters.py  test_runner.py  test_tool_arguments.py  test_utils.py
tests/fixtures/: ctrf.schema.json
